--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-faiss-cpu
 langchain==0.1.14
 langchain-openai==0.0.8
 openai
@@ -6,3 +5,4 @@ numpy==1.23.5
 tqdm
 pydantic==1.10.13
 streamlit
+faiss-cpu==1.7.4.post2  # This version works better on Streamlit Cloud
