--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-langchain==0.1.14
-langchain-openai==0.0.8
+langchain
+langchain-openai
 openai
-numpy==1.23.5
+numpy
 tqdm
-pydantic==1.10.13
+pydantic
 streamlit
-faiss-cpu==1.7.4.post2  # This version works better on Streamlit Cloud
+faiss-cpu
